# surface-installer

./: AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  tox.ini
docs/: index.rst  installation.rst
weathereye/: __init__.py  cli.py  weathereye.py
weathereye/wx_config/ansible/surface_app/env/: extravars  production.env  settings
weathereye/wx_config/ansible/surface_app/project/: ansible.cfg  install_surface.yml  remote_install_surface.yml
weathereye/wx_config/config_app/management/commands/: resetdb.py
weathereye/wx_config/core/: context_processors.py
weathereye/wx_config/static/config_app/css/: style.css
weathereye/wx_config/static/surface_app/css/: style.css
weathereye/wx_config/static/surface_app/js/: script.js
weathereye/wx_config/static/surface_app/spatial_analysis/: countries.json  spatial_analysis_coords.json
weathereye/wx_config/static/surface_app/spatial_analysis/ATG_spatial_analysis/: Basemap.geojson
weathereye/wx_config/static/surface_app/spatial_analysis/CYM_spatial_analysis/: Basemap.geojson
weathereye/wx_config/static/surface_app/spatial_analysis/DMA_spatial_analysis/: Basemap.geojson
weathereye/wx_config/surface_app/: forms.py  tasks.py  urls.py  utils.py  views.py
weathereye/wx_config/templates/config_app/: index.html
weathereye/wx_config/templates/surface_app/: config_complete.html  configuration.html
weathereye/wx_config/wx_config/: settings.py
weathereye/wx_playbook/project/: wx_configuration.yml
(+2 files in other folders)
